--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -5,7 +5,6 @@
 }
 
 body {
-    font-family: 'icomoon';
     font-weight: 400;
     font-size: 16px;
     line-height: 18px;
@@ -13,7 +12,24 @@ body {
     font-family: 'Roboto', sans-serif;
 }
 
+
 /* All start */
+
+h1, h2, h3, h4, h5, h6 {
+	text-transform: uppercase;
+	letter-spacing: 5px;
+	margin: 5px 0 5px;
+}
+
+h1 {
+    font-size: 30px;
+    color: green;
+}
+
+h2 {
+	font-size: 30px;
+	margin: 0 0 30px;
+}
 
 a {
     text-decoration: none;
@@ -22,7 +38,7 @@ a {
 
 a:hover {
     text-decoration: none;
-    color: rgb(177, 177, 177); 
+    color: #989898; 
 }
 
 ul, li {
@@ -32,22 +48,24 @@ ul, li {
 }
 
 .content-box {
-    padding: 120px 0 100px;
+    padding: 120px 0 120px;
 }
 
 .content-box-gray {
-	background: #d8d8d8;
+	background: #eeeeee;
 }
 
 .content-box-top {
     display: flex;
     justify-content: space-between;
+
 }
 
 .title-box {
     max-width: 520px;
     padding-left: 140px;
     position: relative;
+    margin-bottom: 70px;
 }
 
 .title-box::before {
@@ -79,8 +97,10 @@ ul, li {
     line-height: 24px;
     letter-spacing: 0.25px;
     padding: 5px 38px;
-    border: 3px solid #e6e6e6;
+    border: 3px solid green;
 }
+
+
 
 /* All end */
 
@@ -112,6 +132,7 @@ ul, li {
 }
 
 .phone:before {
+    font-family: 'icomoon';
     content: "\e904";
     color: #7bb32e;
     position: absolute;
@@ -119,6 +140,7 @@ ul, li {
 }
 
 .gmail:before {
+    font-family: 'icomoon';
     content: "\e900";
     color: #d14836;
     position: absolute;
@@ -126,6 +148,7 @@ ul, li {
 }
 
 .instagram:before {
+    font-family: 'icomoon';
     content: "\e901";
     color: #e4405f;
     position: absolute;
@@ -133,6 +156,7 @@ ul, li {
 }
 
 .telegram:before {
+    font-family: 'icomoon';
     content: "\e902";
     color: #2ca5e0;
     position: absolute;
@@ -216,6 +240,10 @@ header.sticky .logo__text {
     padding: 15px 0;
 }
 
+.slider.margin {
+    margin-bottom: 130px;
+}
+
 /* Navigation end */
 
 /* Title start  */
@@ -237,7 +265,6 @@ header.sticky .logo__text {
 
 .slider__title {
     text-transform: uppercase;
-    font-size: 30px;
     line-height: 36px;
     color: green; 
     font-weight: 500;
@@ -248,14 +275,14 @@ header.sticky .logo__text {
 
 .slider__text {
     line-height: 24px;
-    font-style: 18px;
+    font-size: 18px;
     color: rgb(177, 177, 177); 
     margin-bottom: 50px;
 }
 
 .slider__btn {
     display: inline-block;
-    font-style: 14px;
+    font-size: 14px;
     line-height: 24px;
     color: rgb(177, 177, 177); 
     font-weight: 500;
@@ -412,7 +439,7 @@ header.sticky .logo__text {
 /* Skills start */
 
 #circle-bar {
-    margin-top: 180px;
+    margin-top: 10px;
     text-align: center;
 }
 
@@ -458,7 +485,164 @@ canvas {
 
 /* Skills end */
 
+/* Portfolio start */
+
+.grid {
+	position: relative;
+	clear: both;
+	margin: 0 auto;
+	padding: 1em 0 4em;
+	max-width: 100%;
+	list-style: none;
+	text-align: center;
+}
+
+.grid h2{
+    font-size: 20px;
+}
+
+.grid figure {
+	position: relative;
+	float: left;
+	overflow: hidden;
+	margin: 10px 1%;
+	min-width: 100%;
+	max-width: 100%;
+	height: auto;
+	background: #3085a3;
+	text-align: center;
+	cursor: pointer;
+}
+
+.grid figure img {
+	position: relative;
+	display: block;
+	min-height: auto;
+	max-width: 100%;
+	opacity: 0.8;
+}
+
+.grid figure figcaption {
+	padding: 2em;
+	color: #fff;
+	text-transform: uppercase;
+	font-size: 1.25em;
+	-webkit-backface-visibility: hidden;
+	backface-visibility: hidden;
+}
+
+.grid figure figcaption::before,
+.grid figure figcaption::after {
+	pointer-events: none;
+}
+
+.grid figure figcaption{
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+}
+
+.grid figure h2 {
+	word-spacing: -0.15em;
+	font-weight: 300;
+}
+
+.grid figure h2 span {
+	font-weight: 800;
+}
+
+.grid figure h2,
+.grid figure p {
+	margin: 0;
+}
+
+.grid figure p {
+	letter-spacing: 1px;
+	font-size: 68.5%;
+}
+
+figure.effect-bubba {
+	background: #9e5406;
+}
+
+figure.effect-bubba img {
+	opacity: 0.7;
+	-webkit-transition: opacity 0.35s;
+	transition: opacity 0.35s;
+}
+
+figure.effect-bubba:hover img {
+	opacity: 0.4;
+}
+
+figure.effect-bubba figcaption::before,
+figure.effect-bubba figcaption::after {
+	position: absolute;
+	top: 30px;
+	right: 30px;
+	bottom: 30px;
+	left: 30px;
+	content: '';
+	opacity: 0;
+	-webkit-transition: opacity 0.35s, -webkit-transform 0.35s;
+	transition: opacity 0.35s, transform 0.35s;
+}
+
+figure.effect-bubba figcaption::before {
+	border-top: 1px solid #fff;
+	border-bottom: 1px solid #fff;
+	-webkit-transform: scale(0,1);
+	transform: scale(0,1);
+}
+
+figure.effect-bubba figcaption::after {
+	border-right: 1px solid #fff;
+	border-left: 1px solid #fff;
+	-webkit-transform: scale(1,0);
+	transform: scale(1,0);
+}
+
+figure.effect-bubba h2 {
+	padding-top: 10%;
+	-webkit-transition: -webkit-transform 0.35s;
+	transition: transform 0.35s;
+	-webkit-transform: translate3d(0,-20px,0);
+	transform: translate3d(0,-20px,0);
+    color: #fff;
+}
+
+figure.effect-bubba p {
+	padding: 20px 2.5em;
+	opacity: 0;
+	-webkit-transition: opacity 0.35s, -webkit-transform 0.35s;
+	transition: opacity 0.35s, transform 0.35s;
+	-webkit-transform: translate3d(0,20px,0);
+	transform: translate3d(0,20px,0);
+}
+
+figure.effect-bubba:hover figcaption::before,
+figure.effect-bubba:hover figcaption::after {
+	opacity: 1;
+	-webkit-transform: scale(1);
+	transform: scale(1);
+}
+
+figure.effect-bubba:hover h2,
+figure.effect-bubba:hover p {
+	opacity: 1;
+	-webkit-transform: translate3d(0,0,0);
+	transform: translate3d(0,0,0);
+}
+
+/* Portfolio end */
+
 /* Footer start*/
+
+footer {
+background-color: #303030;
+}
 
 .footer-box {
     margin-left: 292.5px;
@@ -469,17 +653,15 @@ canvas {
 	margin: 0 0 60px;
 }
 
+.footer-title, .footer-subtitle {
+    color: rgb(177, 177, 177); 
+}
+
 .footer-line {
 	background: green;
 	width: 100px;
 	height: 2px;
 	margin: 30px auto;
 }
-
-/* Form start */
-
-
-
-/* Form end */
 
 /* Footer end */
