--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -668,3 +668,14 @@ background-color: #303030;
 
 /* Footer end */
 
+/* Fancybox start */
+
+.fancybox {
+    display: none;
+}
+
+.services__modal {
+
+}
+
+/* Fancybox end */
